add reference to adam paper and also add a copy of that paper

--- a/optimization.tex
+++ b/optimization.tex
@@ -263,6 +263,8 @@ $S_{db} = 0$ \;
 }
 \end{algorithm}
 
+Please see the paper, \href{https://arxiv.org/pdf/1412.6980.pdf}{"Adam: A Method for Stochastic Optimization"} for more details.
+
 \paragraph{Hyperparameter Choices}
 
 \begin{itemize}
