more notes and splitting up some of the most recent notes into their own files

--- a/logistic_regression_and_nn.tex
+++ b/logistic_regression_and_nn.tex
@@ -189,7 +189,7 @@ Expanding the two above equations to vectors and matrices with $m$ samples, we a
 \frac{\partial{J}}{\partial{b}} = \frac{1}{m} \sum_{i=1}^{m} (a^{(i)} - y^{(i)})
 \end{gather}
 
-In case it's not obvious why we do a summation in one of the forumlas and not the other, it is because the matrix multiplication already implies summations when it sums the dot products together.  For the other formula, however, we are not performing matrix multiplication and must therefore do the summation ourselves.
+In case it's not obvious why we do a summation in one of the forumlas and not the other, it is because the matrix multiplication already implies summations when it computes the dot products.  For the other formula, however, we are not performing matrix multiplication and must therefore do the summation ourselves.
 
 \end{document}
 
