--- a/regularization_and_normalization.tex
+++ b/regularization_and_normalization.tex
@@ -173,7 +173,7 @@ Again, using $L_2$ regularization, let's see how it applies to back propagation 
 
 \begin{gather}
 dW^{[l]} = D + \frac{\lambda}{m} W^{[l]} \\
-W = W - \alpha dW = W - \alpha (D + \frac{\alpha \lambda}{m} W^{[l]} \\
+W = W - \alpha dW = W - \alpha (D + \frac{\alpha \lambda}{m} W^{[l]}) \\
 = W(1 - \frac{\lambda}{m}) - \alpha D
 \end{gather}
 
